changed overflow on body css, added logic to prevent break on meal pairing

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 body {
   font-family: 'Josefin Sans', sans-serif !important;
   background: #fff;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .landing {
